--- a/contracts/instance.html
+++ b/contracts/instance.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Onboarding - Near-multicall</title>
+        <title>Instance - Near-multicall</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../getting-started/introduction.html"><strong aria-hidden="true">1.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../getting-started/onboarding.html" class="active"><strong aria-hidden="true">1.1.</strong> Onboarding</a></li><li class="chapter-item expanded "><a href="../getting-started/making-proposals.html"><strong aria-hidden="true">1.2.</strong> Making Proposals</a></li></ol></li><li class="chapter-item expanded "><a href="../dao-login.html"><strong aria-hidden="true">2.</strong> DAO login</a></li><li class="chapter-item expanded "><a href="../contracts/overview.html"><strong aria-hidden="true">3.</strong> Contracts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../contracts/factory.html"><strong aria-hidden="true">3.1.</strong> Factory</a></li><li class="chapter-item expanded "><a href="../contracts/instance.html"><strong aria-hidden="true">3.2.</strong> Instance</a></li></ol></li><li class="chapter-item expanded "><a href="../links.html"><strong aria-hidden="true">4.</strong> Links</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../getting-started/introduction.html"><strong aria-hidden="true">1.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../getting-started/onboarding.html"><strong aria-hidden="true">1.1.</strong> Onboarding</a></li><li class="chapter-item expanded "><a href="../getting-started/making-proposals.html"><strong aria-hidden="true">1.2.</strong> Making Proposals</a></li></ol></li><li class="chapter-item expanded "><a href="../dao-login.html"><strong aria-hidden="true">2.</strong> DAO login</a></li><li class="chapter-item expanded "><a href="../contracts/overview.html"><strong aria-hidden="true">3.</strong> Contracts</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../contracts/factory.html"><strong aria-hidden="true">3.1.</strong> Factory</a></li><li class="chapter-item expanded "><a href="../contracts/instance.html" class="active"><strong aria-hidden="true">3.2.</strong> Instance</a></li></ol></li><li class="chapter-item expanded "><a href="../links.html"><strong aria-hidden="true">4.</strong> Links</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,50 +142,110 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="onboard-your-dao"><a class="header" href="#onboard-your-dao">Onboard your DAO</a></h1>
-<div id="admonition-note" class="admonition note">
-<div class="admonition-title">
-<p>Note</p>
-<p><a class="admonition-anchor-link" href="#admonition-note"></a></p>
-</div>
-<div>
-<p>In order to create a multicall instance for your DAO, you must have permissions to create function-call proposals on the DAO.</p>
-</div>
-</div>
+                        <h1 id="the-instance-contract"><a class="header" href="#the-instance-contract">The instance contract</a></h1>
+<p>This contract holds the core logic for multicall. Each DAO gets its own Multicall Instance (MI) contract to use. The contract consists of three main features:</p>
 <ol>
-<li>Go to <a href="https://multicall.app/#/dao" target="_blank">https://multicall.app/#/dao</a></li>
-<li>In the lower left hand corner log in with your wallet (1.) and select the DAO you would like to use multicall with (2.).</li>
+<li>
+<p>The <strong>main method</strong> in this contract is:<br />
+<code>multicall ( calls: BatchCall[][] )</code><br />
+It executes a bunch of <code>BatchCall</code> arrays.<br />
+Each <code>BatchCall</code> has information for making a batch of function-calls: a target address and an array on function-calls to execute on that target. Each function-call has a function name, arguments encoded in base64, gas to use (u64 encoded as string) and amount of yoctoNEAR attached deposit (u128 encoded as string).<br />
+Batches inside one array run one after another, as a promise chain.<br />
+Different arrays of batches run in parallel.<br />
+Example:</p>
+<pre><code>calls = [
+    [ Batch_11, Batch_12, Batch_13 ],
+    [ Batch_21, Batch_22]
+]
+</code></pre>
+<p>In this example we have 2 arrays of batches. In the first one <code>Batch_12</code> waits for <code>Batch_11</code> and <code>Batch_13</code> waits for <code>Batch_12</code>. In the second array <code>Batch_22</code> waits for <code>Batch_21</code>. Both arrays start executing in the same block and are independent of each other.</p>
+</li>
+<li>
+<p><strong>Permissioned interactions</strong> with the contract through whitelisting of addresses:<br />
+Due to the async nature of Near, funds can sit in the contract during multiple blocks awaiting the execution of cross-contract calls. To prevent stealing of funds, we require an address to be whitelisted before calling one of the contract's critical methods.
+there are two main whitelists:<br />
+<code>admins whitelist</code> holds addresses that can interact with the contract, they can add or remove others from the whitelist.<br />
+<code>tokens whitelist</code> holds token addresses that can be attached to function calls, as the contract implements ft_on_transfer.<br />
+The contract's address is whitelisted by default, this allows nesting multiple contract methods for convenience.</p>
+</li>
+<li>
+<p><strong>Jobs</strong>:<br />
+Multicall executions can be scheduled to run at a certain time in the future, made possible by integrating <a href="https://cron.cat/">croncat</a>. Anyone can register a job on the multicall contract, but an admin has to approve it. Admins can pause/resume job executions and also edit a job's multicall arguments.<br />
+The following must be specified when creating a job:</p>
+<pre><code class="language-ts">function job_add (
+    job_multicalls: MulticallArgs[],
+    job_cadence: string, // cron expression
+    job_trigger_gas: u64,
+    job_total_budget: u128,
+    job_start_at: u64 = context.blockTimestamp
+): u32 
+</code></pre>
+</li>
 </ol>
-<p><img src="https://i.imgur.com/PiS2KTW.png" alt="" /></p>
-<div id="admonition-tip" class="admonition tip">
-<div class="admonition-title">
-<p>Tip</p>
-<p><a class="admonition-anchor-link" href="#admonition-tip"></a></p>
-</div>
-<div>
-<p>If the DAO symbol lights up red, the address is not a valid dao address - please check for typos. Instead the symbol should be yellow, indicating that while the DAO exists, there is no belonging multicall instance yet.</p>
-</div>
-</div>
-<ol start="3">
-<li>In the middle of the page you see requirements that need to be met in order to create a multicall instance for the specified dao. If all except &quot;<em>DAO has no multicall instance</em>&quot; are met, a green button shows up, click it to propose a multicall creation proposal.</li>
-</ol>
-<p><img src="https://i.imgur.com/9fntsfD.png" alt="" /></p>
-<p>The website will also show a blue button, if a creation proposal already exists, click it to vote yes (You can also vote using AstroDAO).</p>
-<p><img src="https://i.imgur.com/mQpHGcu.png" alt="" /></p>
-<ol start="4">
-<li>Once the proposal passes, a multicall instance will be deployed to <strong>[dao‑name].v1.multicall.near</strong>. If a multicall instance exists for the chosen DAO, the website will display its state, such as whitelisted tokens and job bond.</li>
-</ol>
-<p><img src="https://i.imgur.com/IIQYxOs.png" alt="" /></p>
+<h2 id="example-calls"><a class="header" href="#example-calls">Example Calls</a></h2>
+<h3 id="call-structure"><a class="header" href="#call-structure">Call structure</a></h3>
+<p>example multicall arguments:</p>
+<pre><code class="language-json=">{
+    &quot;calls&quot;: [
+        [ 
+            {
+                &quot;address&quot;: &quot;hello.lennczar.testnet&quot;,
+                &quot;actions&quot;: [
+                    {
+                        &quot;func&quot;: &quot;hello&quot;,
+                        &quot;args&quot;: &quot;eyJ0aGluZyI6IldvcmxkIn0=&quot;, // base64 encoding for {&quot;thing&quot;:&quot;World&quot;}
+                        &quot;gas&quot;: &quot;10000000000000&quot;,
+                        &quot;depo&quot;: &quot;0&quot;
+                    },
+                    {
+                        &quot;func&quot;: &quot;hello&quot;,
+                        &quot;args&quot;: &quot;eyJ0aGluZyI6IldvcmxkIn0=&quot;, // base64 encoding for {&quot;thing&quot;:&quot;World&quot;}
+                        &quot;gas&quot;: &quot;10000000000000&quot;,
+                        &quot;depo&quot;: &quot;0&quot;
+                    }
+                ]
+            },
+            {
+                &quot;address&quot;: &quot;hello.lennczar.testnet&quot;,
+                &quot;actions&quot;: [
+                    {
+                        &quot;func&quot;: &quot;hello&quot;,
+                        &quot;args&quot;: &quot;eyJ0aGluZyI6IldvcmxkIn0=&quot;, // base64 encoding for {&quot;thing&quot;:&quot;World&quot;}
+                        &quot;gas&quot;: &quot;10000000000000&quot;,
+                        &quot;depo&quot;: &quot;0&quot;
+                    }
+                ]
+            }
+        ],
+        [
+            {
+                &quot;address&quot;: &quot;hello.lennczar.testnet&quot;,
+                &quot;actions&quot;: [
+                    {
+                        &quot;func&quot;: &quot;hello&quot;,
+                        &quot;args&quot;: &quot;eyJ0aGluZyI6IldvcmxkIn0=&quot;, // base64 encoding for {&quot;thing&quot;:&quot;World&quot;}
+                        &quot;gas&quot;: &quot;10000000000000&quot;,
+                        &quot;depo&quot;: &quot;0&quot;
+                    }
+                ]
+            }
+        ]
+    ]
+}
+</code></pre>
+<p>This example calls the function <code>hello(thing: string): string</code> in the contract <code>hello.lennczar.testnet</code>.<br />
+We see two arrays of batches: in the first array we have 2 batches that will be run as a promise chain (i.e. second batch will wait for the first batch). The first batch calls the function twice and the second batch calls it only once. In the second array we have one batch that calls the function once, it will run in parallel independently of the two previously mentioned batches.<br />
+Running this results in the following <a href="https://explorer.testnet.near.org/transactions/HHEDj5FnRXJpGwR68PegHNWgpGjXcFWFyq2Nw27sDkx2">transaction</a>  </p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../getting-started/introduction.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../contracts/factory.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../getting-started/making-proposals.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../links.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -195,11 +255,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../getting-started/introduction.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../contracts/factory.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../getting-started/making-proposals.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../links.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
